# python-cpp-accu2016

./: .gitignore  LICENSE  README.md  _myzlib.c  conanfile.txt  setup.py  sum.py  suma.c  test.py  zlib.py  zlib2.py  zlib3.py
1basic_ext/: example.py  mymath.c  setup.py  sum.c
1basic_ext_cpp/: mymath.cpp  setup.py
1basic_ext_err/: example.py  mymath.c
1basic_ext_fcallback/: example.py  mymath.c
2ctypes/: setup.py  sum.py
2ctypes/mymath/: CMakeLists.txt  sum.h
2ctypes/sum_ext/: CMakeLists.txt
2ctypes_zlib/: example.py  test_compress.py
3cffi/: example.py  sum.py
3cffi_out/: _mymath.py  sum.py  sum_build.py
3cffi_zlib/: conanfile.txt  test_compress.py
3cffi_zlib_api/: _myzlib.c  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  test_compress.py  zlib_build.py
3cffi_zlib_api/Release/: _myzlib.exp
4swig/: CMakeLists.txt  sum.c  sum.h  sum.i  sum.py  sum_wrap.c
5pybind11/: CMakeLists.txt  example.cpp
5pybind11_poco/: CMakeLists.txt  conanfile.txt  example.cpp  pypoco_test.py
5pybind11_poco/install/: packer.py  pyinstaller.py  win.py
5pybind11_zlib/: CMakeLists.txt  conanfile.txt  example.cpp  test_compress.py
6embed/: main.cpp
6gil_cpython/: example.py  mymath.cpp
6gil_cpython_zlib/: conanbuildinfo.txt  conanfile.txt  conaninfo.txt  example.py  mymath.cpp  setup.py
7embed/: main.cpp
7embed_call/: main.cpp
7embed_extend/: CMakeLists.txt  main.cpp
7embed_extend_callback/: main.cpp
boost/: CMakeLists.txt  conanfile.txt  main.cpp
embed/: CMakeLists.txt  main.cpp
sumadl/: CMakeLists.txt  suma.c  suma.h
(+2 files in other folders)
